# movie-recommender

./: .gitignore  CMakeLists.txt  README.md
data/: 100kratings.csv  ratings-small.csv  ratings-very-small.csv  split_test.csv
src/: CMakeLists.txt  main.cpp  parser.cpp  parser.hpp  predictor.cpp  predictor.hpp  rating.cpp  rating.hpp
